src/objects/RescheduleRequest__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Reschedule Requests</relationshipLabel>
        <relationshipName>Reschedule_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExpectedDeliveryDate__c</fullName>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InitiatedBy__c</fullName>
        <label>Initiated By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JDE</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ParentOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Order</label>
        <referenceTo>Apttus_Config2__Order__c</referenceTo>
        <relationshipLabel>Reschedule Requests</relationshipLabel>
        <relationshipName>Reschedule_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PickingDate__c</fullName>
        <label>Picking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RequestedActivityDate__c</fullName>
        <label>Requested Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RescheduleReason__c</fullName>
        <label>Reschedule Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RescheduleSource__c</fullName>
        <label>Reschedule Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reschedule Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Reschedule Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reschedule Requests</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>TS_Prevent_Order_Rescheduling</fullName>
        <active>true</active>
        <description>You are not allowed to reschedule the activity.</description>
        <errorConditionFormula>NOT(ISBLANK( ParentOrder__c )) &amp;&amp;
NOT($Permission.TS_Allow_Order_Rescheduling)</errorConditionFormula>
        <errorMessage>You are not allowed to reschedule the activity.</errorMessage>
    </validationRules>
</CustomObject>